--- a/Assets/css/style.css
+++ b/Assets/css/style.css
@@ -23,17 +23,29 @@ body{
   margin-left: 2vh;
 }
 
+.carousel{
+  padding-top: 6vh;
+}
 
-.logo_absolute{
-  position: absolute;
-  float: left;
+.titulos__proyectos{
+  padding: 5vh;
+}
+
+.titulos{
+  font-size: 2em;
+  text-align: center;
+}
+
+@media (min-width: 400px) and (max-width: 600px){
+  .titulos {
+  font-size: 1.5em;
+ }
 }
 
 .navbar{
   margin-bottom: 0;
   border: none;
 }
-
 
 .jumbotron{
   background-image: url("../img/banner2.png");
@@ -54,12 +66,6 @@ body{
   text-align: center;
   padding-top: 30vh;
 }
-
-.titulos{
-  font-size: 2em;
-  text-align: center;
-}
-
 
 .mensaje{
   font-size: 2 em;
@@ -82,18 +88,19 @@ margin-top: 7vh;
 }
 
 .servicios__hijo{
-
   padding-top: 1vh;
   background-color: white;
 }
 
 .titulos__grey{
-  color: #663366;
+  color: silver;
   font-size: 2em;
 }
 
 .border_top{
-    border-top:solid 0.3vh #663366;
+  display: block;
+  width: 100%;
+  border-top:solid 0.3vh silver;
 }
 
 .thumbnail__servicios{
@@ -113,28 +120,22 @@ margin-top: 7vh;
 
 .thumbnail__servicios a:hover {
     background-color: #E5E8E8;
-
 }
 
 .container__bio{
   text-align: left;
 }
 
-
 .icon__servicios{
   color: black;
   text-align: center;
 }
 
-
-
 .container__white{
   background-color: white;
   padding: 5vh;
-  color: #663366;
-  height: 60vh;
+  color: silver;
 }
-
 
 .thumbnail{
   border:none;
@@ -146,11 +147,18 @@ margin-top: 7vh;
   background-image: url("../img/banner4b.png");
   background-repeat: no-repeat;
   background-size: cover;
-  height: 60vh;
+  height: 50vh;
 }
 
 #msj3{
   background-image: url("../img/banner5.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 60vh;
+}
+
+#msj_proyectos{
+  background-image: url("../img/msj_proyectos.png");
   background-repeat: no-repeat;
   background-size: cover;
   height: 60vh;
@@ -181,6 +189,28 @@ margin-top: 7vh;
   top: 30vh;
 }
 
+.toolbar ul {
+            display:table-row;
+        }
+        .toolbar ul li
+        {
+            display: table-cell;
+            height: 100px;
+            list-style-type: none;
+            margin: 10px;
+            vertical-align: middle;
+        }
+        .toolbar ul li a {
+            display:table-cell;
+            vertical-align: middle;
+            height:100px;
+            border: solid 1px black;
+        }
+        .toolbar ul li.button a {
+            height:50px;
+            border: solid 1px black;
+        }
+
 .icon__footer{
   padding: 2vh;
 }
@@ -198,7 +228,6 @@ margin-top: 7vh;
   background-image: none;
   border: none;
 }
-
 
 h1{
   font-size: 1.5em;
@@ -225,8 +254,7 @@ footer{
 
 .footer__logos{
   display: inline-block;
-  margin-left: auto;
-  margin-right: auto;
+  padding-left: 0;
 }
 
 .footer__inline {
